--- a/index.html
+++ b/index.html
@@ -28,24 +28,72 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="about-me" class="anchor" href="#about-me" aria-hidden="true"><span class="octicon octicon-link"></span></a>About me.</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<p>I am PhD student in the DiverSE team (Inria, IRISA, University of Rennes 1 – France).
+My supervisors are <a href="http://people.rennes.inria.fr/Benoit.Baudry/">Benoit Baudry</a> and <a href="http://www.mathieuacher.com/">Mathieu Acher</a>.</p>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
-
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Creating pages manually</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<p>The modeling and management of variability in software product lines is a complex activity and is the focus of my research.
+Basically, my main research interest is around extracting and modeling variability from Informal Natural Language Documents using data mining techniques. It can be from requirements specification, product descriptions or regulatory requirements (legal documents, standards, regulatory practices, etc).</p>
 
 <h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<a id="research" class="anchor" href="#research" aria-hidden="true"><span class="octicon octicon-link"></span></a>Research</h3>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p>My research interests are mainly at the corner of these concerns:</p>
+
+<ul>
+<li>Product Lines Engineering (Reverse Engineering of Variability Models</li>
+<li>Requirements Engineering</li>
+<li>Data Mining</li>
+<li>Information Retrieval (IR)</li>
+<li>Model-Driven Engineering</li>
+</ul>
+
+<h3>
+<a id="publications" class="anchor" href="#publications" aria-hidden="true"><span class="octicon octicon-link"></span></a>Publications</h3>
+
+<p><strong>2015</strong></p>
+
+<p><strong>MatrixMiner : A Red Pill to Architect Informal Product Descriptions in the Matrix.</strong> (<a href="">pdf</a>)<br> 
+Sana Ben Nasr, Guillaume Bécan, Mathieu Acher, João Bosco Ferreira Filho, Benoit Baudry, Nicolas Sannier, and Jean-Marc Davril. In ESEC/FSE’15, Bergamo, Italy, August 2015.</p>
+
+<p><strong>Breathing ontological knowledge into feature model synthesis : an empirical study.</strong> (<a href="https://hal.inria.fr/hal-01096969/document">pdf</a>)<br>
+Guillaume Bécan, Mathieu Acher, Benoit Baudry, and Sana Ben Nasr. In Empirical Software Engineering
+(ESE) published by Springer, 2015.</p>
+
+<p><strong>2014</strong></p>
+
+<p><strong>Moving Toward Product Line Engineering in a Nuclear Industry Consortium.</strong> (<a href="">pdf</a>)<br>
+Sana Ben Nasr, Nicolas Sannier, Mathieu Acher, and Benoit Baudry.  In 18th International Software Product Line
+Conference (SPLC’2014), Florence, Italy, September 2014.</p>
+
+<p><strong>WebFML :Synthesizing Feature Models Everywhere.</strong> (<a href="https://hal.inria.fr/file/index/docid/1022912/filename/SPLC2014-WebFML.pdf">pdf</a>)<br>
+Guillaume Bécan, Sana Ben Nasr, Mathieu Acher, and Benoit Baudry.  In SPLC - 18th International Software Product Line Conference, Florence, Italy, September 2014.</p>
+
+<p><strong>Comparing or Configuring Products : Are We Getting the Right Ones ?</strong> (<a href="https://hal.inria.fr/file/index/docid/927312/filename/VAMOS2014vision.pdf">pdf</a>)<br>
+Nicolas Sannier, Guillaume Bécan, Mathieu Acher, Sana Ben Nasr, and Benoit Baudry.  In 8th International Workshop on
+Variability Modelling of Software-intensive Systems, Nice, France, January 2014. ACM.</p>
+
+<p><strong>2013</strong></p>
+
+<p><strong>An Ontologic-Aware Feature Modeling Environment.</strong> (<a href="https://hal.inria.fr/file/index/docid/915662/filename/JLDP2013_KSynthesis.pdf">pdf</a>)<br>
+Guillaume Bécan, Sana Ben Nasr, Benoit Baudry.  In Journée de lignes de produits - 2013, Paris, France, November 2013.</p>
+
+<p><strong>On Product Comparison Matrices and Variability Models from a Product Comparison/Configuration Perspective.</strong> (<a href="https://hal.inria.fr/file/index/docid/915657/filename/JLDP2013_PCM_suites.pdf">pdf</a>)<br>
+Nicolas Sannier, Guillaume Bécan, Sana Ben Nasr, and Benoit Baudry.  In Journée de lignes de produits - 2013, Paris, France, November 2013.</p>
+
+<p><strong>Breathing Ontological Knowledge Into Feature Model Management</strong>(<a href="https://hal.inria.fr/file/index/docid/874867/filename/RT-441.pdf">pdf</a>)<br>
+Guillaume Bécan, Mathieu Acher, Benoit Baudry, Sana Ben Nasr. Technical Report RT-0441, Inria, 2013.</p>
+
+<h3>
+<a id="software-development" class="anchor" href="#software-development" aria-hidden="true"><span class="octicon octicon-link"></span></a>Software development</h3>
+
+<p>MatrixMiner: a tool for automatically synthesizing product comparison matrices (PCMs) from a set
+of product descriptions written in natural language. MatrixMiner is capable of identifying and organizing features
+and values in a PCM – despite the informality and absence of structure in the textual descriptions of products.</p>
+
+<p>Users can exploit MatrixMiner to visualize the matrix through a Web editor and review, refine, or complement
+the cell values thanks to the traceability with the original product descriptions and technical specifications. The specific source code of the extraction procedure is available online: <a href="https://github.com/sbennasr/matrix-miner-engine">https://github.com/sbennasr/matrix-miner-engine</a>.</p>
 
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
