Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Sbennasr.GitHub.io : A website to host my cv">
+    <meta name="description" content="Sana BEN NASR : ">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Sbennasr.GitHub.io</title>
+    <title>Sana BEN NASR</title>
   </head>
 
   <body>
@@ -18,8 +18,8 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/sbennasr">View on GitHub</a>
 
-          <h1 id="project_title">Sbennasr.GitHub.io</h1>
-          <h2 id="project_tagline">A website to host my cv</h2>
+          <h1 id="project_title">Sana BEN NASR</h1>
+          <h2 id="project_tagline"></h2>
 
         </header>
     </div>
@@ -30,24 +30,32 @@
         <h3>
 <a id="about-me" class="anchor" href="#about-me" aria-hidden="true"><span class="octicon octicon-link"></span></a>About me.</h3>
 
-<p>I am PhD student in the DiverSE team (Inria, IRISA, University of Rennes 1 – France).
+<p>I am PhD student in the <a href="http://diverse.irisa.fr/">DiverSE</a> team (<a href="http://www.inria.fr/">Inria</a>, IRISA, University of Rennes 1 – France).
 My supervisors are <a href="http://people.rennes.inria.fr/Benoit.Baudry/">Benoit Baudry</a> and <a href="http://www.mathieuacher.com/">Mathieu Acher</a>.</p>
 
 <p>The modeling and management of variability in software product lines is a complex activity and is the focus of my research.
-Basically, my main research interest is around extracting and modeling variability from Informal Natural Language Documents using data mining techniques. It can be from requirements specification, product descriptions or regulatory requirements (legal documents, standards, regulatory practices, etc).</p>
+Basically, my main research interest is around mining and modeling variability from Informal Natural Language Documents using data mining techniques. It can be from requirements specification, product descriptions or regulatory requirements (legal documents, standards, regulatory practices, etc).</p>
 
 <h3>
 <a id="research" class="anchor" href="#research" aria-hidden="true"><span class="octicon octicon-link"></span></a>Research</h3>
 
 <p>My research interests are mainly at the corner of these concerns:</p>
 
+<ol>
+<li>Product Lines Engineering
+
 <ul>
-<li>Product Lines Engineering (Reverse Engineering of Variability Models</li>
-<li>Requirements Engineering</li>
-<li>Data Mining</li>
-<li>Information Retrieval (IR)</li>
-<li>Model-Driven Engineering</li>
+<li>Mining and Modeling Variability from Informal and Textual Documents</li>
+<li>Reverse Engineering of Variability Models</li>
+<li>Synthesis of Feature Models</li>
+<li>Extraction of Product Comparison Matrices</li>
 </ul>
+</li>
+<li>Requirements Engineering</li>
+<li>Requirements Traceability </li>
+<li>Data Mining and Information Retrieval (IR)</li>
+<li>Model-Driven Engineering</li>
+</ol>
 
 <h3>
 <a id="publications" class="anchor" href="#publications" aria-hidden="true"><span class="octicon octicon-link"></span></a>Publications</h3>
@@ -86,6 +94,25 @@ Nicolas Sannier, Guillaume Bécan, Sana Ben Nasr, and Benoit Baudry.  In Journé
 Guillaume Bécan, Mathieu Acher, Benoit Baudry, Sana Ben Nasr. Technical Report RT-0441, Inria, 2013.</p>
 
 <h3>
+<a id="teaching" class="anchor" href="#teaching" aria-hidden="true"><span class="octicon octicon-link"></span></a>Teaching</h3>
+
+<p>I am a teaching assistant for the lab sessions of some software engineering courses at the University of Rennes 1 (ISTIC).</p>
+
+<ol>
+<li>Unified Modeling Language (UML)(Tutorials and practical training sessions on Object-oriented design UML)</li>
+<li>Model-Driven Engineering (Practical training sessions)
+
+<ul>
+<li>Meta-Modeling using Ecore/EMF</li>
+<li>Specification of external DSL using Xtext</li>
+<li>Models Transformation (model-to-model, model-to-text) using Xtend</li>
+</ul>
+</li>
+<li>Software Development project </li>
+<li>Practical training sessions on programming (Python)</li>
+</ol>
+
+<h3>
 <a id="software-development" class="anchor" href="#software-development" aria-hidden="true"><span class="octicon octicon-link"></span></a>Software development</h3>
 
 <p>MatrixMiner: a tool for automatically synthesizing product comparison matrices (PCMs) from a set
@@ -96,9 +123,15 @@ and values in a PCM – despite the informality and absence of structure in the 
 the cell values thanks to the traceability with the original product descriptions and technical specifications. The specific source code of the extraction procedure is available online: <a href="https://github.com/sbennasr/matrix-miner-engine">https://github.com/sbennasr/matrix-miner-engine</a>.</p>
 
 <h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+<a id="contact" class="anchor" href="#contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contact</h3>
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<p><a href="mailto:sana.ben-nasr@inria.fr">sana.ben-nasr@inria.fr</a><br>
+(+33) 2 99 84 25 48<br>
+Sana BEN NASR<br>
+IRISA<br>
+Campus de Beaulieu, 263 avenue du Général Leclerc<br>
+35042 RENNES<br>
+France<br></p>
       </section>
     </div>
 
