Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -122,8 +122,7 @@ and values in a PCM – despite the informality and absence of structure in the 
 <p>Users can exploit MatrixMiner to visualize the matrix through a Web editor and review, refine, or complement
 the cell values thanks to the traceability with the original product descriptions and technical specifications.<br></p>
 
-<p>MatrixMiner is available online: <a href="http://matrix-miner.variability.io">http://matrix-miner.variability.io</a>.<br>
-The specific source code of the extraction procedure is available online: <a href="https://github.com/sbennasr/matrix-miner-engine">https://github.com/sbennasr/matrix-miner-engine</a>.</p>
+<p>MatrixMiner is available online: <a href="http://matrix-miner.variability.io">http://matrix-miner.variability.io</a>.<br></p>
 
 <h3>
 <a id="contact" class="anchor" href="#contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contact</h3>
