--- a/index.html
+++ b/index.html
@@ -42,18 +42,11 @@ Basically, my main research interest is around mining and modeling variability f
 <p>My research interests are mainly at the corner of these concerns:</p>
 
 <ol>
-<li>Product Lines Engineering
-
-<ul>
-<li>Mining and Modeling Variability from Informal and Textual Documents</li>
-<li>Reverse Engineering of Variability Models</li>
-<li>Synthesis of Feature Models</li>
-<li>Extraction of Product Comparison Matrices</li>
-</ul>
-</li>
-<li>Requirements Engineering</li>
-<li>Requirements Traceability </li>
+<li>Text and Web Mining</li>
+<li>Machine Learning</li>
 <li>Data Mining and Information Retrieval (IR)</li>
+<li>Mining and modeling Variability</li>
+<li>Tracing Variability</li> 
 <li>Model-Driven Engineering</li>
 </ol>
 
