--- a/index.html
+++ b/index.html
@@ -34,21 +34,28 @@
 My supervisors are <a href="http://people.rennes.inria.fr/Benoit.Baudry/">Benoit Baudry</a> and <a href="http://www.mathieuacher.com/">Mathieu Acher</a>.</p>
 
 <p>The modeling and management of variability in software product lines is a complex activity and is the focus of my research.
-Basically, my main research interest is around mining and modeling variability from Informal Natural Language Documents using data mining techniques. It can be from requirements specification, product descriptions or regulatory requirements (legal documents, standards, regulatory practices, etc).</p>
+<!--Basically, my main research interest is around mining and modeling variability from Informal Natural Language Documents using data mining techniques. It can be from requirements specification, product descriptions or regulatory requirements (legal documents, standards, regulatory practices, etc).</p>-->
 
 <h3>
 <a id="research" class="anchor" href="#research" aria-hidden="true"><span class="octicon octicon-link"></span></a>Research</h3>
 
 <p>My research interests are mainly at the corner of these concerns:</p>
-
 <ol>
+<li>Model-Driven Engineering</li>
+<li>Product Line Engineering</li>
+<li>Domain Specific Languages</li>
+<li>Data Mining</li>
+<li>Machine Learning</li>
+</ol>
+        
+<!--<ol>
 <li>Text and Web Mining</li>
 <li>Machine Learning</li>
 <li>Data Mining and Information Retrieval (IR)</li>
 <li>Mining and modeling Variability</li>
 <li>Tracing Variability</li> 
 <li>Model-Driven Engineering</li>
-</ol>
+</ol>-->
 
 <h3>
 <a id="publications" class="anchor" href="#publications" aria-hidden="true"><span class="octicon octicon-link"></span></a>Publications</h3>
