--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@ the cell values thanks to the traceability with the original product description
 <h3>
 <a id="contact" class="anchor" href="#contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contact</h3>
 
-<p><a href="mailto:sana.ben-nasr@inria.fr">sana.ben-nasr@inria.fr</a><br>
-(+33) 2 99 84 25 48<br>
+<p><a href="mailto:bennasr.sana2@gmail.com">bennasr.sana2@gmail.com</a><br>
+<!-- (+33) 2 99 84 25 48<br>-->
 Sana BEN NASR<br>
 IRISA<br>
 Campus de Beaulieu, 263 avenue du Général Leclerc<br>
