--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
 My supervisors are <a href="http://people.rennes.inria.fr/Benoit.Baudry/">Benoit Baudry</a> and <a href="http://www.mathieuacher.com/">Mathieu Acher</a>.</p>
 
 <p>The modeling and management of variability in software product lines is a complex activity and is the focus of my research.
-<!--Basically, my main research interest is around mining and modeling variability from Informal Natural Language Documents using data mining techniques. It can be from requirements specification, product descriptions or regulatory requirements (legal documents, standards, regulatory practices, etc).</p>-->
+This includes how to leverage data mining techniques for extracting and modeling variability knowledge from informal documentation.
+  <!--Basically, my main research interest is around mining and modeling variability from Informal Natural Language Documents using data mining techniques. It can be from requirements specification, product descriptions or regulatory requirements (legal documents, standards, regulatory practices, etc).</p>-->
 
 <h3>
 <a id="research" class="anchor" href="#research" aria-hidden="true"><span class="octicon octicon-link"></span></a>Research</h3>
@@ -45,6 +46,7 @@ My supervisors are <a href="http://people.rennes.inria.fr/Benoit.Baudry/">Benoit
 <li>Product Line Engineering</li>
 <li>Domain Specific Languages</li>
 <li>Data Mining</li>
+<li>Information Retrieval (IR)</li>
 <li>Machine Learning</li>
 </ol>
         
